<package>
  <name>pykdl</name>
  <version>1.2.2</version>
  <description>
    This package contains the python bindings PyKDL for the Kinematics and Dynamics
    Library (KDL), distributed by the Orocos Project. 
  </description>
  <maintainer email="ruben@intermodalics.eu">Ruben Smits</maintainer>
  <license>LGPL</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>
  <build_depend>python-sip</build_depend>

  <run_depend>catkin</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>python-sip</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
