<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>python_orocos_kdl</name>
  <version>1.5.1</version>
  <description>
    This package contains the python bindings PyKDL for the Kinematics and Dynamics
    Library (KDL), distributed by the Orocos Project.
  </description>
  <maintainer email="ruben.smits@intermodalics.eu">Ruben Smits</maintainer>
  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>
  <url>http://wiki.ros.org/python_orocos_kdl</url>
  <license>LGPL-2.1-or-later</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>orocos_kdl</build_depend>

  <depend condition="$ROS_PYTHON_VERSION == 2">python</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3</depend>

  <exec_depend>catkin</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-future</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-future</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-psutil</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-psutil</test_depend>

  <doc_depend condition="$ROS_PYTHON_VERSION == 2">python-sphinx</doc_depend>
  <doc_depend condition="$ROS_PYTHON_VERSION == 3">python3-sphinx</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
