<package>
  <name>python_orocos_kdl</name>
  <version>1.2.2</version>
  <description>
    The 'python_orocos_kdl' package is deprecated and is being replaced by
    the 'pykdl' package starting in ROS Hydromedusa. The only
    difference between these two packages is the name.

    Python bindings for the Orocos Kinematics
    and Dynamics Library (KDL).
  </description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <url type="website">http://www.orocos.org/kdl</url>

  <author>Ruben Smits</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pykdl</build_depend>
  <run_depend>pykdl</run_depend>

  <export>
    <deprecated>The 'python_orocos_kdl' package is deprecated and is being replaced by the 'pykdl' package starting in ROS Hydromedusa. The only difference between these two packages is the name.</deprecated>
  </export>
</package>

