<package>
  <name>pykdl</name>
  <version>0.3.0</version>
  <description>
    Python bindings for the Orocos Kinematics and Dynamics Library (KDL).
  </description>
  <maintainer email="orocos-dev@lists.mech.kuleuven.be">Orocos Developers</maintainer>

  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/pykdl</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ruben Smits</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>kdl</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>kdl</run_depend>

  <!-- Dependencies needed only for running tests. -->

  <export>
    <build_type>cmake</build_type>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
